some slight dark mode fixes

--- a/styles/layout/mainLayout.module.css
+++ b/styles/layout/mainLayout.module.css
@@ -23,3 +23,7 @@
   border: none;
   height: 80%;
 }
+
+.toggleDarkMode {
+  cursor: pointer;
+}
